# mpdris

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
resources/: mpdris.service  mpdris.service.local  sample.mpDris.conf  sample.mpdris.conf
resources/man/man1/: mpdris.1
resources/man/man5/: mpdris.conf.5
src/: args.rs  config.rs  connection.rs  expand.rs  main.rs  notify.rs
src/client/: connection.rs  error.rs  mod.rs  status.rs
src/client/error/: tests.rs
src/connection/: connection.rs  error.rs  mod.rs  status.rs
src/connection/error/: tests.rs
src/dbus/: base.rs  mod.rs  player.rs
src/util/: expand.rs  mod.rs  notify.rs
xtask/: Cargo.toml
xtask/src/: args.rs  dist.rs  main.rs  man.rs  task.rs
