[package]
name = "mpDris"
description = "A client implementing the dbus MPRIS standard for mpd"
version = "0.1.0"
edition = "2021"
authors = [ "jasger9000 | jasger_" ]
license = "MIT"
repository = "https://github.com/jasger9000/mpDris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", default-features = false, features = ["color", "error-context", "help", "std", "usage"] }
const_format = "0.2.32"
dbus = "0.9.7"
libc = "0.2.155"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.13"
signal-hook = "0.3.17"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
