[package]
name = "mpDris"
description = "A client implementing the dbus MPRIS standard for mpd"
version = "0.1.0"
edition = "2021"
authors = [ "jasger9000 | jasger_" ]
license = "MIT"
repository = "https://github.com/jasger9000/mpDris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
const_format = "0.2.32"
zbus = "4.4.0"
libc = "0.2.156"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
signal-hook = "0.3.17"
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
once_cell = "1.19.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
