[package]
name = "mpdris"
description = "A client implementing the dbus MPRIS standard for mpd"
version = "1.2.0"
edition = "2024"
authors = [ "jasger9000 | jasger_" ]
license = "MIT"
repository = "https://github.com/jasger9000/mpdris"

[workspace]
members = [ "xtask" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
const_format = "0.2.32"
zbus = "5.3.1"
libc = "0.2.156"
serde = { version = "1.0.208", features = ["derive"] }
toml = "1.0.7"
signal-hook = "0.4.3"
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
libloading = "0.9.0"
log = "0.4.25"
simplelog = "0.12.2"
time = "0.3.47"
dns-lookup = "3.0.1"

[build-dependencies]
git2 = { version = "0.20.4", default-features = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

